--- a/vacpropstest.html
+++ b/vacpropstest.html
@@ -46,7 +46,7 @@ function init(){
     center: [40.224, -74.76], zoom: 15,});
 
 
-  var cartoUrl = 'http://restoringtrenton.cartodb.com/api/v2/viz/294c3ace-ba0e-11e4-a512-0e0c41326911/viz.json';
+  var cartoUrl = 'http://restoring-trenton.cartodb.com/api/v2/viz/a6f57b9c-c374-11e4-a69d-0e018d66dc29/viz.json';
 
 
   cartodb.createLayer(map, cartoUrl)
@@ -96,72 +96,72 @@ var sublayers = [];
 
 overlayLayers = {};
 
-cartodb.createLayer(map, cartoUrl)
-  .addTo(map)
-  .on('done', function(layer) { 
-    layer.setZIndex(2);
-    var sublayer = layer.getSubLayer(0);
-    sublayer.set(vacantBldgsGet);
-    sublayers.push(sublayer);
-    overlayLayers["VACANT BUILDINGS"] = layer;
+// cartodb.createLayer(map, cartoUrl)
+//   .addTo(map)
+//   .on('done', function(layer) { 
+//     layer.setZIndex(2);
+//     var sublayer = layer.getSubLayer(0);
+//     sublayer.set(vacantBldgsGet);
+//     sublayers.push(sublayer);
+//     overlayLayers["VACANT BUILDINGS"] = layer;
 
-   }).on('error', function() { 
-    //log the error
-  });
+//    }).on('error', function() { 
+//     //log the error
+//   });
 
-cartodb.createLayer(map, cartoUrl)
-  .addTo(map)
-  .on('done', function(layer) { 
-    layer.setZIndex(3);
-    var sublayer = layer.getSubLayer(0);
-    sublayer.set(vacantLotsGet);
-    sublayers.push(sublayer);
-    overlayLayers["VACANT LOTS"] = layer;
+// cartodb.createLayer(map, cartoUrl)
+//   .addTo(map)
+//   .on('done', function(layer) { 
+//     layer.setZIndex(3);
+//     var sublayer = layer.getSubLayer(0);
+//     sublayer.set(vacantLotsGet);
+//     sublayers.push(sublayer);
+//     overlayLayers["VACANT LOTS"] = layer;
 
-   }).on('error', function() { 
-    //log the error
-  });
+//    }).on('error', function() { 
+//     //log the error
+//   });
 
-cartodb.createLayer(map, cartoUrl)
-//  .addTo(map)
-  .on('done', function(layer) { 
-    layer.setZIndex(4);
-    var sublayer = layer.getSubLayer(0);
-    sublayer.set(homesteadGet);
-    sublayers.push(sublayer);
-    overlayLayers["POSSIBLE HOMESTEADS"] = layer;
+// cartodb.createLayer(map, cartoUrl)
+// //  .addTo(map)
+//   .on('done', function(layer) { 
+//     layer.setZIndex(4);
+//     var sublayer = layer.getSubLayer(0);
+//     sublayer.set(homesteadGet);
+//     sublayers.push(sublayer);
+//     overlayLayers["POSSIBLE HOMESTEADS"] = layer;
 
-   }).on('error', function() { 
-    //log the error
-  });
+//    }).on('error', function() { 
+//     //log the error
+//   });
 
-cartodb.createLayer(map, cartoUrl)
-  .on('done', function(layer) { 
-    layer.setZIndex(5);
-    var sublayer = layer.getSubLayer(0);
-    sublayer.set(lienPropsGet);
-    sublayers.push(sublayer);
-    overlayLayers["OUTSTANDING LIENS"] = layer;
-    L.control.layers(null, overlayLayers).addTo(map)
+// cartodb.createLayer(map, cartoUrl)
+//   .on('done', function(layer) { 
+//     layer.setZIndex(5);
+//     var sublayer = layer.getSubLayer(0);
+//     sublayer.set(lienPropsGet);
+//     sublayers.push(sublayer);
+//     overlayLayers["OUTSTANDING LIENS"] = layer;
+//     L.control.layers(null, overlayLayers).addTo(map)
 
-   }).on('error', function() { 
-    //log the error
-  });
+//    }).on('error', function() { 
+//     //log the error
+//   });
 
-//this is the info layer
+// //this is the info layer
 
 
-cartodb.createLayer(map, cartoUrl)
-  .addTo(map)
-  .on('done', function(layer) { 
-    layer.setZIndex(100);
-    var sublayer = layer.getSubLayer(0);
-    sublayer.set(invisibleLayer);
-    sublayers.push(sublayer);
+// cartodb.createLayer(map, cartoUrl)
+//   .addTo(map)
+//   .on('done', function(layer) { 
+//     layer.setZIndex(100);
+//     var sublayer = layer.getSubLayer(0);
+//     sublayer.set(invisibleLayer);
+//     sublayers.push(sublayer);
 
-   }).on('error', function() { 
-    //log the error
-  });
+//    }).on('error', function() { 
+//     //log the error
+//   });
 
 
 }
