--- a/vacpropstest.html
+++ b/vacpropstest.html
@@ -66,27 +66,27 @@ var sublayers = [];
 //styling the different types of parcels -- add any others here
 
     var vacantLotsGet = {
-      sql: "SELECT * FROM trenton_properties where parc_type = 'VACANT LOT'",
+      sql: "SELECT * FROM master_properties where parc_type = 'VACANT LOT'",
       cartocss: "#trenton_properties{polygon-fill: #B9D132; polygon-opacity:0.5;line-color:#fff; line-opacity:0.2;}",
     }
 
     var vacantBldgsGet = {
-      sql: "SELECT * FROM trenton_properties where parc_type = 'VACANT BLDG'",
+      sql: "SELECT * FROM master_properties where parc_type = 'VACANT BLDG'",
       cartocss: "#trenton_properties{polygon-fill: #D11717; polygon-opacity:0.6;line-color: #fff; line-opacity:0.2;}"
     }
 
     var lienPropsGet = {
-      sql: "SELECT * FROM trenton_properties where (city_liens > 0 or priv_liens > 0)",
+      sql: "SELECT * FROM master_properties where (city_liens > 0 or priv_liens > 0)",
       cartocss: "#trenton_properties{polygon-fill: #000; polygon-opacity:0.2;line-color:#000 ; line-width: 2; line-opacity:0.5;}"
     }
 
     var homesteadGet = {
-      sql: "SELECT * FROM trenton_properties where owner = 'CITY OF TRENTON' and area_name != '' and class = '2' and parc_type = 'VACANT BLDG'",
+      sql: "SELECT * FROM master_properties where owner = 'CITY OF TRENTON' and class = '2' and parc_type = 'VACANT BLDG'",
       cartocss: "#trenton_properties{polygon-fill: #00FBFF; polygon-opacity:0.2;line-color:#00FBFF ; line-width: 3; line-opacity:0.8;}"
     }
 
     var invisibleLayer = {
-      sql: "SELECT * FROM trenton_properties",
+      sql: "SELECT * FROM master_properties",
       cartocss: "#trenton_properties{polygon-opacity:0;line-color:#fff ; line-width: 1; line-opacity:0;}"
 
     }
@@ -96,72 +96,72 @@ var sublayers = [];
 
 overlayLayers = {};
 
-// cartodb.createLayer(map, cartoUrl)
-//   .addTo(map)
-//   .on('done', function(layer) { 
-//     layer.setZIndex(2);
-//     var sublayer = layer.getSubLayer(0);
-//     sublayer.set(vacantBldgsGet);
-//     sublayers.push(sublayer);
-//     overlayLayers["VACANT BUILDINGS"] = layer;
+cartodb.createLayer(map, cartoUrl)
+  .addTo(map)
+  .on('done', function(layer) { 
+    layer.setZIndex(2);
+    var sublayer = layer.getSubLayer(0);
+    sublayer.set(vacantBldgsGet);
+    sublayers.push(sublayer);
+    overlayLayers["VACANT BUILDINGS"] = layer;
 
-//    }).on('error', function() { 
-//     //log the error
-//   });
+   }).on('error', function() { 
+    //log the error
+  });
 
-// cartodb.createLayer(map, cartoUrl)
-//   .addTo(map)
-//   .on('done', function(layer) { 
-//     layer.setZIndex(3);
-//     var sublayer = layer.getSubLayer(0);
-//     sublayer.set(vacantLotsGet);
-//     sublayers.push(sublayer);
-//     overlayLayers["VACANT LOTS"] = layer;
+cartodb.createLayer(map, cartoUrl)
+  .addTo(map)
+  .on('done', function(layer) { 
+    layer.setZIndex(3);
+    var sublayer = layer.getSubLayer(0);
+    sublayer.set(vacantLotsGet);
+    sublayers.push(sublayer);
+    overlayLayers["VACANT LOTS"] = layer;
 
-//    }).on('error', function() { 
-//     //log the error
-//   });
+   }).on('error', function() { 
+    //log the error
+  });
 
-// cartodb.createLayer(map, cartoUrl)
-// //  .addTo(map)
-//   .on('done', function(layer) { 
-//     layer.setZIndex(4);
-//     var sublayer = layer.getSubLayer(0);
-//     sublayer.set(homesteadGet);
-//     sublayers.push(sublayer);
-//     overlayLayers["POSSIBLE HOMESTEADS"] = layer;
+cartodb.createLayer(map, cartoUrl)
+//  .addTo(map)
+  .on('done', function(layer) { 
+    layer.setZIndex(4);
+    var sublayer = layer.getSubLayer(0);
+    sublayer.set(homesteadGet);
+    sublayers.push(sublayer);
+    overlayLayers["POSSIBLE HOMESTEADS"] = layer;
 
-//    }).on('error', function() { 
-//     //log the error
-//   });
+   }).on('error', function() { 
+    //log the error
+  });
 
-// cartodb.createLayer(map, cartoUrl)
-//   .on('done', function(layer) { 
-//     layer.setZIndex(5);
-//     var sublayer = layer.getSubLayer(0);
-//     sublayer.set(lienPropsGet);
-//     sublayers.push(sublayer);
-//     overlayLayers["OUTSTANDING LIENS"] = layer;
-//     L.control.layers(null, overlayLayers).addTo(map)
+cartodb.createLayer(map, cartoUrl)
+  .on('done', function(layer) { 
+    layer.setZIndex(5);
+    var sublayer = layer.getSubLayer(0);
+    sublayer.set(lienPropsGet);
+    sublayers.push(sublayer);
+    overlayLayers["OUTSTANDING LIENS"] = layer;
+    L.control.layers(null, overlayLayers).addTo(map)
 
-//    }).on('error', function() { 
-//     //log the error
-//   });
+   }).on('error', function() { 
+    //log the error
+  });
 
-// //this is the info layer
+//this is the info layer
 
 
-// cartodb.createLayer(map, cartoUrl)
-//   .addTo(map)
-//   .on('done', function(layer) { 
-//     layer.setZIndex(100);
-//     var sublayer = layer.getSubLayer(0);
-//     sublayer.set(invisibleLayer);
-//     sublayers.push(sublayer);
+cartodb.createLayer(map, cartoUrl)
+  .addTo(map)
+  .on('done', function(layer) { 
+    layer.setZIndex(100);
+    var sublayer = layer.getSubLayer(0);
+    sublayer.set(invisibleLayer);
+    sublayers.push(sublayer);
 
-//    }).on('error', function() { 
-//     //log the error
-//   });
+   }).on('error', function() { 
+    //log the error
+  });
 
 
 }
