--- a/vacpropstest.html
+++ b/vacpropstest.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
     <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
+
+    <script src="GeoSearch/js/l.control.geosearch.js"></script>
+    <script src="GeoSearch/js/l.geosearch.provider.google.js"></script>
+    <link rel="stylesheet" href="GeoSearch/css/l.geosearch.css" />
   <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v2/themes/css/cartodb.ie.css" />
   <![endif]-->
