--- a/vacpropstest.html
+++ b/vacpropstest.html
@@ -17,13 +17,12 @@
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
     <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
 
+    <link rel="stylesheet" href="GeoSearch/css/l.geosearch.css" />
     <script src="GeoSearch/js/l.control.geosearch.js"></script>
     <script src="GeoSearch/js/l.geosearch.provider.google.js"></script>
-    <link rel="stylesheet" href="GeoSearch/css/l.geosearch.css" />
-  <!--[if lte IE 8]>
-    <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v2/themes/css/cartodb.ie.css" />
-  <![endif]-->
   
+    <script type="text/javascript" src="/js/config.js"></script>
+    <script type="text/javascript" src="/js/mapscripts.js"></script>
 
     <style>
     html, body {width:100%; height:100%; padding: 0; margin: 0;}
@@ -31,8 +30,7 @@
     </style>
 
 
-    <script type="text/javascript" src="/js/mapscripts.js"></script>
-    
+
 
 </head>
 
