Mobile view improvement
turn off scaling on mobile devices, normalize button sizes

--- a/vacpropstest.html
+++ b/vacpropstest.html
@@ -8,6 +8,9 @@
 <title>VACANT PROPERTY TEST v200</title>
   
     <meta charset="utf-8">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
     <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
