--- a/vacpropstest.html
+++ b/vacpropstest.html
@@ -5,7 +5,7 @@
 
 <head> 
   
-<title>VACANT PROPERTY TEST v200</title>
+<title>Trenton Vacant Property Map</title>
   
     <meta charset="utf-8">
   
